--- a/main.ejs
+++ b/main.ejs
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>UNICON 2018</title>
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/unicon.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
     <script
   src="http://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
     <script src="semantic/dist/semantic.min.js"></script>
-    <script src="/scripts/transition.js"></script>
-    <script src="/scripts/visibility.js"></script>
-    <script src="/scripts/event.js"></script>
+    <script src="scripts/transition.js"></script>
+    <script src="scripts/visibility.js"></script>
+    <script src="scripts/event.js"></script>
 
     <script>
       function initMap() {
