--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,17 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>UNICON 2018</title>
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/unicon.css">
     <script
   src="http://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
     <script src="semantic/dist/semantic.min.js"></script>
-    <script src="scripts/transition.js"></script>
-    <script src="scripts/visibility.js"></script>
-    <script src="scripts/event.js"></script>
+    <script src="/scripts/transition.js"></script>
+    <script src="/scripts/visibility.js"></script>
+    <script src="/scripts/event.js"></script>
 
     <script>
       function initMap() {
