--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,143 +7,6 @@
     <title>UNICON 2018</title>
     <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
-    <script
-  src="http://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-    <script src="dist/semantic.min.js"></script>
-    <script src="scripts/transition.js"></script>
-    <script src="scripts/visibility.js"></script>
-    <!-- <script src="scripts/event.js"></script> -->
-
-    <script>
-      $(document)
-        .ready(function() {
-          // fix main menu to page on passing
-          $('.main.menu').visibility({
-            type: 'fixed',
-          });
-
-          $('.main.menu .right.item .icon').on('click', function () {
-            $('.modal').css("display", "block");
-          });
-
-          $('.modal .modal-content i').on('click', function () {
-            $('.modal').css("display", "none");
-          });
-
-          $('.modal .modal-content .list #about').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".about-section.segment").offset().top - 130
-            }, 300);
-            $('.modal').css("display", "none");
-          });
-
-          $('.modal .modal-content .list #speakers').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".speakers-section.segment").offset().top - 130
-            }, 300);
-            $('.modal').css("display", "none");
-          });
-
-          $('.modal .modal-content .list #partners').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".partners-section.segment").offset().top - 130
-            }, 300);
-            $('.modal').css("display", "none");
-          });
-
-          $('.modal .modal-content .list #agenda').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".agenda-section.segment").offset().top - 130
-            }, 300);
-            $('.modal').css("display", "none");
-          });
-
-          $('.modal .modal-content .list #pricing').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".pricing-section.segment").offset().top - 130
-            }, 300);
-            $('.modal').css("display", "none");
-          });
-
-          $('.modal .modal-content .list #venue').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".venue-section.segment").offset().top
-            }, 300);
-            $('.modal').css("display", "none");
-          });
-
-          $('.modal .modal-content .list #contact').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".contact-section.segment").offset().top - 130
-            }, 300);
-            $('.modal').css("display", "none");
-          });
-
-
-
-          $('.main.menu .container #about').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".about-section.segment").offset().top - 130
-            }, 300);
-          });
-
-          $('.main.menu .container #speakers').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".speakers-section.segment").offset().top - 130
-            }, 300);
-          });
-
-          $('.main.menu .container #partners').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".partners-section.segment").offset().top - 130
-            }, 300);
-          });
-
-          $('.main.menu .container #agenda').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".agenda-section.segment").offset().top - 130
-            }, 300);
-          });
-
-          $('.main.menu .container #pricing').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".pricing-section.segment").offset().top - 130
-            }, 300);
-          });
-
-          $('.main.menu .container #venue').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".venue-section.segment").offset().top
-            }, 300);
-          });
-
-          $('.main.menu .container #contact').on('click', function () {
-            $('body').animate({
-              scrollTop: $(".contact-section.segment").offset().top - 130
-            }, 300);
-          });
-
-      });
-    </script>
-    <script>
-      function initMap() {
-          var utown = {lat: -25.363, lng: 131.044};
-          var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 4,
-            center: utown
-          });
-          var marker = new google.maps.Marker({
-            position: utown,
-            map: map
-          });
-      }
-    </script>
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqWtxeZ7ffilrlXfCQYXVU80u2ddp22dM&callback=initMap">
-    </script>
-
   </head>
 
   <body>
@@ -533,6 +396,29 @@
  </div>
 
  </div>
+
+ <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+ <script src="dist/semantic.min.js"></script>
+ <script src="scripts/transition.js"></script>
+ <script src="scripts/visibility.js"></script>
+ <script src="scripts/event.js"></script>
+
+ <script>
+   function initMap() {
+       var utown = {lat: -25.363, lng: 131.044};
+       var map = new google.maps.Map(document.getElementById('map'), {
+         zoom: 4,
+         center: utown
+       });
+       var marker = new google.maps.Marker({
+         position: utown,
+         map: map
+       });
+   }
+ </script>
+ <script async defer
+   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqWtxeZ7ffilrlXfCQYXVU80u2ddp22dM&callback=initMap">
+ </script>
 
 </body>
 
