--- a/views/main.ejs
+++ b/views/main.ejs
@@ -8,10 +8,11 @@
     <link rel="stylesheet" type="text/css" href="dist/semantic.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/unicon.css">
 
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="dist/semantic.min.js"></script>
-    <script src="scripts/transition.js"></script>
-    <script src="scripts/visibility.js"></script>
-    <script src="scripts/event.js"></script>
+    <script src="/transition.js"></script>
+    <script src="/visibility.js"></script>
+    <script src="/event.js"></script>
 
     <script>
        function initMap() {
@@ -419,10 +420,6 @@
  </div>
 
  </div>
-
- <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-
-
 
 </body>
 
