--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,9 +10,9 @@
 
     <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="dist/semantic.min.js"></script>
-    <script src="/transition.js"></script>
-    <script src="/visibility.js"></script>
-    <script src="/event.js"></script>
+    <script src="scripts/transition.js"></script>
+    <script src="scripts/visibility.js"></script>
+    <script src="scripts/event.js"></script>
 
     <script>
        function initMap() {
