--- a/views/main.ejs
+++ b/views/main.ejs
@@ -13,7 +13,7 @@
     <script src="scripts/transition.js"></script>
     <script src="scripts/visibility.js"></script>
     <script src="scripts/event.js"></script>
-    
+
     <script>
        function initMap() {
            var utown = {lat: -25.363, lng: 131.044};
@@ -381,7 +381,7 @@
 
    <div class="ui text center aligned update container">
      <h3>We announce updates via email first. Leave your address to be the first to know.</h3>
-       <form method="POST" action="http://formspree.io/sotwlgh@gmail.com">
+       <form method="POST" action="https://formspree.io/sotwlgh@gmail.com">
          <div class="ui action input">
          <input type="text" name="email" placeholder="Email">
          <button class="ui button" type="submit">Apply Now</button>
