--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -15,7 +15,7 @@
 
 .ui.inverted.header-section.segment, .ui.primary.inverted.segment {
     background: none;
-    background-image: url('../speakers_images/background.png');
+    background-image: url('/speakers_images/background.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
