--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -1,7 +1,7 @@
 
 @font-face  {
     font-family: 'Graphik-Medium';
-    src:url('fonts/Graphik-Medium.otf');
+    src:url('/fonts/Graphik-Medium.otf');
 }
 
 .ui.button {
