--- a/views/main.ejs
+++ b/views/main.ejs
@@ -302,7 +302,7 @@
     </div>
 
     <div class="ui middle aligned equal width content grid container">
-      <div class="eight wide mobile four wide tablet four wide computer column">
+      <div class="sixteen wide mobile four wide tablet four wide computer column">
         <div class="ui raised card">
           <h2>Current Students</h2>
           <h4>Limited Supply</h4>
@@ -310,7 +310,7 @@
           <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register Now</a>
         </div>
       </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
+      <div class="sixteen wide mobile four wide tablet four wide computer column">
         <div class="ui raised card">
           <h2>Recent Graduates</h2>
           <h4>Class of 2015 Onwards</h4>
@@ -318,7 +318,7 @@
           <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register Now</a>
         </div>
       </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
+      <div class="sixteen wide mobile four wide tablet four wide computer column">
         <div class="ui raised card">
           <h2>Public</h2>
           <h4>Selection criteria applied</h4>
@@ -326,7 +326,7 @@
           <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register Now</a>
         </div>
       </div>
-      <div class="eight wide mobile four wide tablet four wide computer column">
+      <div class="sixteen wide mobile four wide tablet four wide computer column">
         <div class="ui raised card">
           <h2>Investor</h2>
           <h4>Access to Meeting Area</h4>
