--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -4,6 +4,14 @@
     src:url('/fonts/Graphik-Medium.otf');
 }
 
+html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 .ui.button {
   background-color: rgb(51, 16, 107);
   color: white;
