--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -4,12 +4,18 @@
     src:url('/fonts/Graphik-Medium.otf');
 }
 
-html,body {
+/*html,body {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
+    overflow-x:
+}*/
+
+* {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
 }
 
 .ui.button {
