--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -6,9 +6,10 @@
 
 html,body {
     width: 100%;
-    height: 100%;
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 /** {
@@ -101,7 +102,6 @@ html,body {
   border-radius: 0;
   border: none;
   box-shadow: none;
-  box-sizing: border-box;
   transition:
     box-shadow 0.5s ease,
     padding 0.5s ease
