--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -4,19 +4,19 @@
     src:url('/fonts/Graphik-Medium.otf');
 }
 
-html,body {
+/*html,body {
     width: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden;
     overflow-y: auto;
-}
+}*/
 
-/** {
+* {
     background: #000 !important;
     color: #0f0 !important;
     outline: solid #f00 1px !important;
-}*/
+}
 
 .ui.button {
   background-color: rgb(51, 16, 107);;
