--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -12,11 +12,11 @@
     overflow-y: auto;
 }*/
 
-* {
+/** {
     background: #000 !important;
     color: #0f0 !important;
     outline: solid #f00 1px !important;
-}
+}*/
 
 .ui.button {
   background-color: rgb(51, 16, 107);;
@@ -97,7 +97,7 @@
   position: absolute;
   height: 100px;
   width: 100%;
-  margin: 0;
+  /*margin: 0;*/
   bottom: 0;
   border-radius: 0;
   border: none;
