--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -52,6 +52,7 @@
 }
 
 .header-section.segment {
+  width: 100%;
   height: 100%;
 }
 
@@ -97,7 +98,7 @@
   position: absolute;
   height: 100px;
   width: 100%;
-  /*margin: 0;*/
+  margin: 0;
   bottom: 0;
   border-radius: 0;
   border: none;
@@ -131,6 +132,7 @@
 }
 
 .about-section.segment {
+  width: 100%;
   margin: 0;
   padding-top: 6em;
   padding-bottom: 3em;
@@ -153,6 +155,7 @@
 }
 
 .speakers-section.segment {
+  width: 100%;
   margin: 0;
   padding: 3em;
 }
@@ -211,8 +214,8 @@
 
 
 .partners-section.segment {
+  width: 100%;
   margin: 0;
-  padding: 0;
   /*height: 850px;*/
   /*top: 30%;*/
   padding: 3em;
@@ -280,8 +283,8 @@
 
 
 .agenda-section.segment {
+  width: 100%;
   margin: 0;
-  padding: 0;
   padding: 3em;
 }
 
@@ -301,8 +304,8 @@
 }
 
 .pricing-section.segment {
+  width: 100%;
   margin: 0;
-  padding: 0;
   padding: 3em;
 }
 
@@ -370,8 +373,8 @@
 }
 
 .venue-section.segment {
+  width: 100%;
   margin: 0;
-  padding: 0;
   padding: 3em;
 }
 
@@ -423,6 +426,7 @@
 
 
 .contact-section.segment {
+  width: 100%;
   margin: 0;
   padding: 3em;
 }
@@ -465,6 +469,7 @@
 }
 
 .footer.segment {
+  width: 100%;
   margin: 0;
   padding: 0;
   min-height: 100px;
@@ -500,7 +505,7 @@
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 20; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 20%; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -535,75 +540,6 @@
     margin: 25px 0;
 }
 
-@media only screen and (min-device-width : 375px) and (max-device-width : 667px) {
-  .main.menu .container {
-    display: none;
-  }
-  .main.menu .right.item .button  {
-    display: none;
-  }
-  .main.menu .right.item .icon {
-    font-size: 25px;
-    display: block;
-  }
-
-  .speakers-section.segment .detail.container .column  .name {
-    font-size: 20px;
-    color: white;
-    bottom: 20%;
-    margin-left: 5%;
-  }
-  .speakers-section.segment .detail.container .column  .title {
-    font-size: 13px;
-    color: lightgrey;
-    font-weight: lighter;
-    bottom: 11%;
-    margin-left: 5%;
-  }
-  .speakers-section.segment .detail.container .column  .company {
-    font-size: 13px;
-    color: lightgrey;
-    font-weight: lighter;
-    bottom: 3%;
-    margin-left: 5%;
-  }
-
-  .speakers-section.segment .detail.container .column  i {
-    z-index: 1;
-    position: absolute;
-    top: 15%;
-    right: 15%;
-    font-size: 1.5em;
-    color: white;
-  }
-
-  .venue-section.segment .grid #image img  {
-    position: relative;
-    height: 300px;
-    width: 100%;
-    padding: 0;
-  }
-
-  .footer.segment .grid #logo .header {
-    position: relative;
-    font-size: 20px;
-    text-align: center;
-    margin-top: 1.5em;
-  }
-
-  .footer.segment .grid #social .container {
-    position: relative;
-    width: 150px;
-    text-align: center;
-  }
-
-  .footer.segment .grid #social .container i {
-    font-size: 25px;
-    font-weight: 200;
-    margin-bottom: 2em;
-  }
-}
-
 @media only screen and (max-width: 700px) {
   .main.menu .container {
     display: none;
@@ -616,21 +552,37 @@
     display: block;
   }
 
+  .main.secondary.menu {
+    z-index: 1;
+    position: absolute;
+    height: 60px;
+    width: 100%;
+    margin: 0;
+    bottom: 0;
+    border-radius: 0;
+    border: none;
+    box-shadow: none;
+    transition:
+      box-shadow 0.5s ease,
+      padding 0.5s ease
+    ;
+  }
+
   .speakers-section.segment .detail.container .column  .name {
-    font-size: 25px;
+    font-size: 20px;
     color: white;
     bottom: 20%;
     margin-left: 5%;
   }
   .speakers-section.segment .detail.container .column  .title {
-    font-size: 15px;
+    font-size: 13px;
     color: lightgrey;
     font-weight: lighter;
     bottom: 11%;
     margin-left: 5%;
   }
   .speakers-section.segment .detail.container .column  .company {
-    font-size: 15px;
+    font-size: 13px;
     color: lightgrey;
     font-weight: lighter;
     bottom: 3%;
