--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -510,7 +510,7 @@
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /*Enable scroll if needed */
+    overflow: hidden; /*Enable scroll if needed */
     background-color: rgb(48, 207, 208); /* Fallback color */
     /*background-color: rgba(0,0,0,0.4); /* Black w/ opacity */*/
 }
@@ -569,24 +569,33 @@
   }
 
   .speakers-section.segment .detail.container .column  .name {
-    font-size: 20px;
+    font-size: 18px;
     color: white;
     bottom: 20%;
     margin-left: 5%;
   }
   .speakers-section.segment .detail.container .column  .title {
-    font-size: 13px;
+    font-size: 12px;
     color: lightgrey;
     font-weight: lighter;
     bottom: 11%;
     margin-left: 5%;
   }
   .speakers-section.segment .detail.container .column  .company {
-    font-size: 13px;
+    font-size: 12px;
     color: lightgrey;
     font-weight: lighter;
     bottom: 3%;
     margin-left: 5%;
+  }
+
+  .speakers-section.segment .detail.container .column  i {
+    z-index: 1;
+    position: absolute;
+    top: 15%;
+    right: 13%;
+    font-size: 1.5em;
+    color: white;
   }
 
   .venue-section.segment .grid #image img  {
@@ -594,6 +603,10 @@
     height: 300px;
     width: 100%;
     padding: 0;
+  }
+
+  .contact-section.segment .update.container .input {
+    width: 80%;
   }
 
   .footer.segment .grid #logo .header {
