--- a/views/main.ejs
+++ b/views/main.ejs
@@ -95,7 +95,7 @@
      <div class="ui text header container">
        <h1 class="ui header">Past Speakers</h1>
      </div>
-     <div class="ui middle aligned equal width grid detail">
+     <div class="ui middle aligned equal width grid detail container">
        <div class="eight wide mobile four wide tablet four wide computer column">
          <a href="https://sg.linkedin.com/in/yinglantan"><i class="linkedin icon"></i></a>
          <h3 class="name">Yinglan Tan</h3>
