--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -160,26 +160,26 @@
   padding: 3em;
 }
 
-.speakers-section.segment .header {
+.speakers-section.segment .header.container {
   margin: 0;
   position: relative;
 }
 
-.speakers-section.segment .detail {
+.speakers-section.segment .detail.container {
   position: relative;
   margin-top: 4em;
 }
 
-.speakers-section.segment .column  {
+.speakers-section.segment .detail.container .column  {
   position: relative;
   height: 100%;
 }
 
-.speakers-section.segment .detail .column  img {
+.speakers-section.segment .detail.container .column  img {
   position: relative;
 }
 
-.speakers-section.segment .detail .column  i {
+.speakers-section.segment .detail.container .column  i {
   z-index: 1;
   position: absolute;
   top: 12%;
@@ -188,24 +188,24 @@
   color: white;
 }
 
-.speakers-section.segment .detail .column  h3 {
+.speakers-section.segment .detail.container .column  h3 {
   z-index: 1;
   position: absolute;
 }
 
-.speakers-section.segment .detail .column  .name {
+.speakers-section.segment .detail.container .column  .name {
   font-size: 25px;
   color: white;
   bottom: 20%;
   margin-left: 5%;
 }
-.speakers-section.segment .detail .column  .title {
+.speakers-section.segment .detail.container .column  .title {
   color: lightgrey;
   font-weight: lighter;
   bottom: 11%;
   margin-left: 5%;
 }
-.speakers-section.segment .detail .column  .company {
+.speakers-section.segment .detail.container .column  .company {
   color: lightgrey;
   font-weight: lighter;
   bottom: 3%;
@@ -568,20 +568,20 @@
     ;
   }
 
-  .speakers-section.segment .detail .column  .name {
+  .speakers-section.segment .detail.container .column  .name {
     font-size: 18px;
     color: white;
     bottom: 20%;
     margin-left: 5%;
   }
-  .speakers-section.segment .detail .column  .title {
+  .speakers-section.segment .detail.container .column  .title {
     font-size: 12px;
     color: lightgrey;
     font-weight: lighter;
     bottom: 11%;
     margin-left: 5%;
   }
-  .speakers-section.segment .detail .column  .company {
+  .speakers-section.segment .detail.container .column  .company {
     font-size: 12px;
     color: lightgrey;
     font-weight: lighter;
@@ -589,7 +589,7 @@
     margin-left: 5%;
   }
 
-  .speakers-section.segment .detail .column  i {
+  .speakers-section.segment .detail.container .column  i {
     z-index: 1;
     position: absolute;
     top: 15%;
@@ -606,7 +606,7 @@
   }
 
   .contact-section.segment .update.container .input {
-    width: 80%;
+    padding: 5em;
   }
 
   .footer.segment .grid #logo .header {
