--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -99,6 +99,7 @@
   height: 100px;
   width: 100%;
   margin: 0;
+  padding: 0;
   bottom: 0;
   border-radius: 0;
   border: none;
@@ -558,6 +559,7 @@
     height: 60px;
     width: 100%;
     margin: 0;
+    padding: 0;
     bottom: 0;
     border-radius: 0;
     border: none;
