--- a/views/main.ejs
+++ b/views/main.ejs
@@ -391,7 +391,7 @@
 
  </div>
 
- <div class="ui inverted vertical footer segment">
+ <!-- <div class="ui inverted vertical footer segment">
 
    <div class="ui stackable inverted grid">
      <div class="four wide column" id="logo">
@@ -409,7 +409,7 @@
        </div>
      </div>
    </div>
- </div>
+ </div> -->
 
  </div>
 
