--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -12,11 +12,11 @@
     overflow-y: auto;
 }*/
 
-* {
+/** {
     background: #000 !important;
     color: #0f0 !important;
     outline: solid #f00 1px !important;
-}
+}*/
 
 .ui.button {
   background-color: rgb(51, 16, 107);;
@@ -469,7 +469,7 @@
   font-weight: 300;
 }
 
-.footer.segment {
+/*.footer.segment {
   width: 100%;
   margin: 0;
   padding: 0;
@@ -487,9 +487,9 @@
   font-size: 20px;
   text-align: center;
   margin-top: 1.5em;
-}
+}*/
 
-.footer.segment .grid #social .container {
+/*.footer.segment .grid #social .container {
   position: relative;
   /*margin-top: 2em;*/
   width: 100px;
@@ -500,7 +500,7 @@
 .footer.segment .grid #social .container i {
   font-size: 25px;
   font-weight: 200;
-}
+}*/
 
 .modal {
     display: none; /* Hidden by default */
@@ -611,7 +611,7 @@
     padding: 5em;
   }
 
-  .footer.segment .grid #logo .header {
+  /*.footer.segment .grid #logo .header {
     position: relative;
     font-size: 20px;
     text-align: center;
@@ -628,5 +628,5 @@
     font-size: 25px;
     font-weight: 200;
     margin-bottom: 2em;
-  }
+  }*/
 }
