--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -99,7 +99,6 @@
   height: 100px;
   width: 100%;
   margin: 0;
-  padding: 0;
   bottom: 0;
   border-radius: 0;
   border: none;
@@ -559,7 +558,6 @@
     height: 60px;
     width: 100%;
     margin: 0;
-    padding: 0;
     bottom: 0;
     border-radius: 0;
     border: none;
@@ -609,8 +607,7 @@
 
   .contact-section.segment .update.container .input {
     position: relative;
-    padding-left: 30%;
-    padding-right: 30%;
+    width: 80%;
   }
 
   /*.footer.segment .grid #logo .header {
