--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -605,7 +605,7 @@
     padding: 0;
   }
 
-  .contact-section.segment .update.container .input {
+  .contact-section.segment .update.container form {
     position: relative;
     width: 80%;
   }
