--- a/views/main.ejs
+++ b/views/main.ejs
@@ -373,12 +373,16 @@
 
    <div class="ui text center aligned update container">
      <h3>We announce updates via email first. Leave your address to be the first to know.</h3>
-       <form method="POST" action="https://formspree.io/sotwlgh@gmail.com">
+      <div class="ui action input">
+          <input type="text" name="email" placeholder="Email">
+          <button class="ui button" type="submit">Apply Now</button>
+      </div>
+       <!-- <form method="POST" action="https://formspree.io/sotwlgh@gmail.com">
          <div class="ui action input">
          <input type="text" name="email" placeholder="Email">
          <button class="ui button" type="submit">Apply Now</button>
        </div>
-       </form>
+       </form> -->
    </div>
 
    <div class="ui text center aligned contact-header container">
