--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -604,7 +604,7 @@
 
   .contact-section.segment .update.container input {
     position: relative;
-    width: auto;
+    width: 30px;
   }
 
   /*.footer.segment .grid #logo .header {
