--- a/views/main.ejs
+++ b/views/main.ejs
@@ -395,7 +395,7 @@
 
  </div>
 
- <!-- <div class="ui inverted vertical footer segment">
+ <div class="ui inverted vertical footer segment">
 
    <div class="ui stackable inverted grid">
      <div class="four wide column" id="logo">
@@ -413,7 +413,7 @@
        </div>
      </div>
    </div>
- </div> -->
+ </div>
 
  </div>
 
