--- a/views/main.ejs
+++ b/views/main.ejs
@@ -401,7 +401,7 @@
      <div class="four wide column" id="logo">
        <h4 class="ui inverted header">©UNICON 2018</h4>
      </div>
-     <div class="eight wide column">
+     <div class="seven wide column">
        <div class="ui text container">
        </div>
      </div>
