--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -12,11 +12,11 @@
     overflow-y: auto;
 }*/
 
-* {
+/** {
     background: #000 !important;
     color: #0f0 !important;
     outline: solid #f00 1px !important;
-}
+}*/
 
 .ui.button {
   background-color: rgb(51, 16, 107);;
@@ -468,11 +468,8 @@
   font-weight: 300;
 }
 
-.footer.segment {
-  width: 100%;
+.footer.segment .grid {
   margin: 0;
-  padding: 0;
-  min-height: 100px;
 }
 
 /*.footer.segment .grid .column{
