--- a/views/main.ejs
+++ b/views/main.ejs
@@ -14,7 +14,7 @@
     <script src="scripts/visibility.js"></script>
     <script src="scripts/event.js"></script>
 
-    <script>
+    <!-- <script>
        function initMap() {
            var utown = {lat: -25.363, lng: 131.044};
            var map = new google.maps.Map(document.getElementById('map'), {
@@ -29,7 +29,7 @@
      </script>
      <script async defer
        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqWtxeZ7ffilrlXfCQYXVU80u2ddp22dM&callback=initMap">
-     </script>
+     </script> -->
 
   </head>
 
