--- a/views/main.ejs
+++ b/views/main.ejs
@@ -403,6 +403,7 @@
      </div>
      <div class="eight wide column">
        <div class="ui text container">
+         <h4 class="ui inverted header">Made with love from NES</h4>
        </div>
      </div>
      <div class="four wide column" id="social">
