--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -625,7 +625,7 @@
     width: 100%;
     margin: 0;
     padding: 3em;
-    min-height: 70px;
+    height: 50px;
   }
 
   .footer.segment .grid #logo .header {
