--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -625,28 +625,28 @@
     width: 100%;
     margin: 0;
     padding: 3em;
-    height: 50px;
+    min-height: 50px;
   }
 
   .footer.segment .grid #logo .header {
     position: relative;
     font-size: 20px;
     text-align: center;
-    margin-top: 1em;
+    margin-top: 15px;
   }
 
   .footer.segment .grid #comment .header {
     position: relative;
     font-size: 20px;
     text-align: center;
-    margin: 1em;
+    margin: 10px;
   }
 
   .footer.segment .grid #social .container {
     position: relative;
     width: 150px;
     text-align: center;
-    margin-bottom: 1em;
+    margin-bottom: 15px;
   }
 
   .footer.segment .grid #social .container i {
