--- a/views/main.ejs
+++ b/views/main.ejs
@@ -50,6 +50,7 @@
    <div class="ui borderless center aligned inverted main secondary menu">
      <div href="#" class="header item">
        UNICON 2018
+       <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register</a>
      </div>
      <div class="ui center aligned text container">
        <a class="item" id="about" >About</a>
