--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -110,7 +110,18 @@
 }
 
 .main.menu .header.item {
-  font-size: 20px;
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.main.menu .header.item .ui.button{
+  display: none;
+  height: 50px;
+  width: 120px;
+  text-align: center;
+  line-height: 25px;
+  font-weight: 500;
+  font-size: 17px;
 }
 
 .main.menu .right.item {
@@ -515,7 +526,7 @@
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: hidden; /*Enable scroll if needed */
+    overflow: hidden;; /*Enable scroll if needed */
     background-color: rgb(48, 207, 208); /* Fallback color */
     /*background-color: rgba(0,0,0,0.4); /* Black w/ opacity */*/
 }
@@ -572,6 +583,17 @@
       padding 0.5s ease
     ;
   }
+
+  .main.menu .header.item .ui.button{
+    display: block;
+    height: 50px;
+    width: 120px;
+    text-align: center;
+    line-height: 25px;
+    font-weight: 500;
+    font-size: 17px;
+  }
+
 
   .speakers-section.segment .detail.container .column  .name {
     font-size: 18px;
