--- a/views/main.ejs
+++ b/views/main.ejs
@@ -49,7 +49,7 @@
 
    <div class="ui borderless center aligned inverted main secondary menu">
      <div href="#" class="header item">
-       UNICON 2018
+       <h1 class="ui inverted header">UNICON 2018</h1>
        <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register</a>
      </div>
      <div class="ui center aligned text container">
