--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -590,8 +590,8 @@
   }
 
   .main.menu .header.item .ui.button {
-    padding: 0;
-    margin: 0;
+    padding-top: 20px;
+    margin-left: 10px;
     float: left;
     display: block;
     height: 40px;
