--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -589,9 +589,14 @@
     display: none;
   }
 
+  .main.menu .header.item {
+    padding: 0;
+    margin: 0;
+  }
+
   .main.menu .header.item .ui.button {
-    padding-top: 20px;
-    margin-left: 10px;
+    padding-top: 10px;
+    margin: 0;
     float: left;
     display: block;
     height: 40px;
