--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -18,7 +18,7 @@
     outline: solid #f00 1px !important;
 }*/
 
-.ui.button {
+.ui.inverted.button {
   background-color: rgb(51, 16, 107);;
   color: white;
 }
@@ -117,10 +117,10 @@
 
 .main.menu .header.item .ui.button{
   display: none;
-  height: 50px;
-  width: 120px;
+  height: 40px;
+  width: 100px;
   text-align: center;
-  line-height: 25px;
+  line-height: 20px;
   font-weight: 500;
   font-size: 17px;
 }
@@ -595,8 +595,8 @@
   }
 
   .main.menu .header.item .ui.button {
-    padding: 10 auto;
-    margin: 0;
+    padding-top: : 10px;
+    margin: 0 auto;
     display: block;
     height: 40px;
     width: 100px;
