--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -18,7 +18,7 @@
     outline: solid #f00 1px !important;
 }*/
 
-.ui.inverted.button {
+.ui.button {
   background-color: rgb(51, 16, 107);;
   color: white;
 }
@@ -595,8 +595,8 @@
   }
 
   .main.menu .header.item .ui.button {
-    padding-top: : 10px;
-    margin: 0 auto;
+    /*padding-top: : 10px;
+    margin: 0 auto;*/
     display: block;
     height: 40px;
     width: 100px;
