--- a/views/main.ejs
+++ b/views/main.ejs
@@ -50,7 +50,7 @@
    <div class="ui borderless center aligned inverted main secondary menu">
      <div href="#" class="header item">
        <h1 class="ui inverted header">UNICON 2018</h1>
-       <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui inverted button">Register</a>
+       <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register</a>
      </div>
      <div class="ui center aligned text container">
        <a class="item" id="about" >About</a>
@@ -62,7 +62,7 @@
        <a class="item" id="contact">Contact</a>
      </div>
      <div class="right item">
-       <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui inverted button">Register</a>
+       <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register</a>
        <i class="sidebar icon"></i>
      </div>
    </div>
@@ -308,7 +308,7 @@
           <h2>Current Students</h2>
           <h4>Limited Supply</h4>
           <h1>FREE</h1>
-          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui inverted button">Register Now</a>
+          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register Now</a>
         </div>
       </div>
       <div class="sixteen wide mobile five wide tablet five wide computer column">
@@ -316,7 +316,7 @@
           <h2>Recent Graduates</h2>
           <h4>Class of 2015 Onwards</h4>
           <h1>S$100</h1>
-          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui inverted button">Register Now</a>
+          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register Now</a>
         </div>
       </div>
       <div class="sixteen wide mobile five wide tablet five wide computer column">
@@ -324,7 +324,7 @@
           <h2>Public</h2>
           <h4>Selection criteria applied</h4>
           <h1>S$250</h1>
-          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui inverted button">Register Now</a>
+          <a href="https://www.eventbrite.sg/e/unicon-2018-tickets-37560045106" class="ui button">Register Now</a>
         </div>
       </div>
     </div>
@@ -376,7 +376,7 @@
      <h3>We announce updates via email first. Leave your address to be the first to know.</h3>
       <div class="ui action input">
           <input type="text" name="email" placeholder="Email">
-          <button class="ui inverted button" type="submit">Apply Now</button>
+          <button class="ui button" type="submit">Apply Now</button>
       </div>
        <!-- <form method="POST" action="https://formspree.io/sotwlgh@gmail.com">
          <div class="ui action input">
