--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -12,11 +12,11 @@
     overflow-y: auto;
 }*/
 
-/** {
+* {
     background: #000 !important;
     color: #0f0 !important;
     outline: solid #f00 1px !important;
-}*/
+}
 
 .ui.button {
   background-color: rgb(51, 16, 107);;
@@ -115,7 +115,7 @@
   font-weight: 500;
 }
 
-.main.menu .header.item .ui.button{
+.main.menu .header.item .ui.button {
   display: none;
   height: 40px;
   width: 100px;
