--- a/views/main.ejs
+++ b/views/main.ejs
@@ -404,7 +404,7 @@
      </div>
      <div class="eight wide column" id="comment">
        <div class="ui text container">
-         <h4 class="ui inverted header">Made with 💜 from NES</h4>
+         <h4 class="ui inverted header">Brought to you by NES Global</h4>
        </div>
      </div>
      <div class="four wide column" id="social">
