--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -636,7 +636,7 @@
     font-size: 13px;
     color: lightgrey;
     font-weight: 600;
-    bottom: 2%;
+    bottom: 5px;
     margin-left: 5%;
   }
 
