--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -636,15 +636,15 @@
     font-size: 13px;
     color: lightgrey;
     font-weight: 600;
-    bottom: 5px;
+    bottom: 0;
     margin-left: 5%;
   }
 
   .speakers-section.segment .detail.container .column  i {
     z-index: 1;
     position: absolute;
-    top: 12%;
-    right: 10%;
+    top: 10%;
+    right: 8%;
     font-size: 1.5em;
     color: white;
   }
