--- a/views/main.ejs
+++ b/views/main.ejs
@@ -194,7 +194,7 @@
        <div class="eight wide mobile four wide tablet four wide computer column">
          <a href="https://sg.linkedin.com/in/johannquerne"><i class="linkedin icon"></i></a>
          <h3 class="name">Johann Querne</h3>
-         <h3 class="title">Head of Digital Marketing</h3>
+         <h3 class="title">Head of Marketing</h3>
          <h3 class="company">Uber APAC</h3>
          <img class="ui rounded image" src="/speakers_images/johann.png">
        </div>
@@ -404,7 +404,7 @@
      </div>
      <div class="eight wide column" id="comment">
        <div class="ui text container">
-         <h4 class="ui inverted header">Brought to you by NES Global</h4>
+         <h4 class="ui inverted header">Brought to you by NES Global 🤘🏻</h4>
        </div>
      </div>
      <div class="four wide column" id="social">
