--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -622,7 +622,7 @@
   .speakers-section.segment .detail.container .column  .name {
     font-size: 18px;
     color: white;
-    bottom: 18%;
+    bottom: 20%;
     margin-left: 5%;
   }
   .speakers-section.segment .detail.container .column  .title {
@@ -647,6 +647,14 @@
     right: 8%;
     font-size: 1.5em;
     color: white;
+  }
+
+  .partners-section.segment .description.container {
+    margin: 0;
+    position: relative;
+    margin-top: 4em;
+    padding-left: 1em;
+    padding-right: 1em;
   }
 
   .venue-section.segment .grid #image img  {
