--- a/views/main.ejs
+++ b/views/main.ejs
@@ -376,7 +376,7 @@
      <h3>We announce updates via email first. Leave your address to be the first to know.</h3>
       <div class="ui action input">
           <input type="text" name="email" placeholder="Email">
-          <button class="ui button" type="submit">Apply Now</button>
+          <button class="ui button" type="submit">Apply</button>
       </div>
        <!-- <form method="POST" action="https://formspree.io/sotwlgh@gmail.com">
          <div class="ui action input">
