--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -29,8 +29,8 @@
 
 .ui.inverted.header-section.segment, .ui.primary.inverted.segment {
     background: none;
-    /*background-color: rgb(51, 16, 107);*/
-    background-image: url('/speakers_images/background.png');
+    background-color: rgb(0, 0, 0);
+    /*background-image: url('/speakers_images/background.png');*/
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -679,6 +679,7 @@
   .contact-section.segment .update.container .input button {
     position: relative;
     width: 100px;
+    font-size: 20px;
   }
 
   .footer.segment {
