--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -127,7 +127,7 @@
 
 .main.menu .container .item {
   font-weight: 600;
-  font-size: 15px;
+  font-size: 17px;
 }
 
 .main.menu .right.item {
@@ -567,6 +567,13 @@
     margin: 25px 0;
 }
 
+@media only screen and (max-width: 2000px) {
+  .main.menu .container .item {
+    font-weight: 600;
+    font-size: 15px;
+  }
+}
+
 @media only screen and (max-width: 700px) {
 
   .header-section.segment .container {
@@ -710,7 +717,7 @@
 
   .footer.segment .grid #comment .header {
     position: relative;
-    font-size: 18px;
+    font-size: 17px;
     text-align: center;
     margin: 10px;
   }
