--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -168,7 +168,7 @@
 .about-section.segment .detail.container h3 {
   font-weight: 500;
   line-height: 2em;
-  text-align: left;
+  text-align: center;
 }
 
 .speakers-section.segment {
