--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -573,8 +573,11 @@
   .main.menu .container .item {
     font-weight: 600;
     font-size: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }
+
 
 @media only screen and (max-width: 700px) {
 
