--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -578,14 +578,14 @@
   }
 }
 
-@media only screen and (max-width: 1700px) {
+/*@media only screen and (max-width: 1700px) {
   .main.menu .container .item {
     font-weight: 600;
     font-size: 13px;
     padding-left: 3px;
     padding-right: 3px;
   }
-}
+}*/
 
 @media only screen and (max-width: 1300px) {
   .main.menu .container .item {
@@ -599,7 +599,7 @@
     position: relative;
     height: 100%;
     padding: 6px;
-  }  
+  }
 }
 
 @media only screen and (max-width: 700px) {
