--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -587,7 +587,7 @@
   }
 }*/
 
-@media only screen and (min-width: 1500px) {
+@media only screen and (max-width: 900px) {
   .main.menu .container .item {
     font-weight: 600;
     font-size: 12px;
