--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -578,19 +578,10 @@
   }
 }
 
-/*@media only screen and (max-width: 1700px) {
+@media only screen and (max-width: 1000px) {
   .main.menu .container .item {
     font-weight: 600;
-    font-size: 13px;
-    padding-left: 3px;
-    padding-right: 3px;
-  }
-}*/
-
-@media only screen and (max-width: 900px) {
-  .main.menu .container .item {
-    font-weight: 600;
-    font-size: 12px;
+    font-size: 15px;
     padding-left: 5px;
     padding-right: 5px;
   }
@@ -600,6 +591,36 @@
     height: 100%;
     padding: 6px;
   }
+  .speakers-section.segment .detail.container .column  .name {
+    font-size: 15px;
+    color: white;
+    bottom: 20%;
+    margin-left: 5%;
+  }
+  .speakers-section.segment .detail.container .column  .title {
+    font-size: 10px;
+    color: lightgrey;
+    font-weight: 600;
+    bottom: 10%;
+    margin-left: 5%;
+  }
+  .speakers-section.segment .detail.container .column  .company {
+    font-size: 10px;
+    color: lightgrey;
+    font-weight: 600;
+    bottom: 0;
+    margin-left: 5%;
+  }
+
+  .speakers-section.segment .detail.container .column  i {
+    z-index: 1;
+    position: absolute;
+    top: 10%;
+    right: 8%;
+    font-size: 1.5em;
+    color: white;
+  }
+
 }
 
 @media only screen and (max-width: 700px) {
