--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -278,10 +278,6 @@
   margin-right: auto;
 }
 
-.partners-section.segment .primary.detail.container .column  img {
-  position: relative;
-}
-
 .partners-section.segment .secondary.detail.container {
   position: relative;
   margin-top: 3em;
@@ -729,6 +725,11 @@
     margin-top: 4em;
     padding-left: 1.5em;
     padding-right: 1.5em;
+  }
+
+  .partners-section.segment .primary.detail.container .column  {
+    position: relative;
+    padding: 8%;
   }
 
   .venue-section.segment .grid #image img  {
