--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -285,7 +285,7 @@
 
 .partners-section.segment .secondary.detail.container .column  {
   position: relative;
-  padding: 5%;
+  padding: 3%;
 }
 
 .partners-section.segment .secondary.detail.container .column  img {
@@ -729,7 +729,14 @@
 
   .partners-section.segment .primary.detail.container .column  {
     position: relative;
-    padding: 7%;
+    padding: 5%;
+    margin: 10px 0;
+  }
+
+  .partners-section.segment .secondary.detail.container .column  {
+    position: relative;
+    padding: 3%;
+    margin: 5px 0;
   }
 
   .venue-section.segment .grid #image img  {
