--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -756,7 +756,7 @@
     width: 100px;
     font-size: 15px;
     text-align: center;
-    padding-left: 15px;
+    padding: 10px auto;
   }
 
   .footer.segment {
