--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -666,13 +666,12 @@
 
   .main.menu .header.item .ui.button {
     /*padding-top: : 6px;*/
-    /*padding-left: 15px;*/
+    padding-left: 15px;
     display: block;
-    padding: 10px auto;
     height: 40px;
     width: 100px;
     text-align: center;
-    line-height: 18px;
+    line-height: 15px;
     font-weight: 600;
     font-size: 16px;
   }
