--- a/public/stylesheets/unicon.css
+++ b/public/stylesheets/unicon.css
@@ -637,6 +637,7 @@
   .main.menu .right.item .icon {
     font-size: 25px;
     display: block;
+    color: white;
   }
 
   .main.secondary.menu {
@@ -665,7 +666,6 @@
   }
 
   .main.menu .header.item .ui.button {
-    /*padding-top: : 6px;*/
     padding-left: 15px;
     display: block;
     height: 40px;
